<resources>
    <string name="app_name">Umiejętnosci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="adept_pancerza_title"> 1. Adept Pancerza </string>
    <string name="adept_pancerza_content">
       \t \t \t Typ: Umiejętność pasywna \n \n

        Zmniejsza ilość Siły potrzebnej do noszenia
        pancerza o 2 punktypunkty (to znaczy, że postać nie
        traci punktów Prędkości, kiedy ciężar pancerza wykroczy poza jej siłę
        (w tym przypadku o maksymalnie 2 punkty)), jednak kiedy ciężar ekwipunku
        wykracza poza poziom Siły postaci, wszystkie akcje
        wymagające Kondycji kosztują o 1 pkt. więcej. </string>
    <string name="bieglosc_pancerza_title"> \t 1.1. Biegłość pancerza </string>
    <string name="bieglosc_pancerza_content">
        \t Umiejętność podstawowa: Adept Pancerza \n
        \t Typ: Umiejętność pasywna \n \n
     	Zmniejsza ilość siły potrzebnej do noszenia
        pancerza o 4 punkty. Umiejętność ta zwiększa ilość PK,
        których wymagają akcje postaci tak samo, jak Adept
        Pancerza, przy czym jeśli ciężar ekwipunku postaci
        przekroczy jej siłę o 3 lub więcej punktów, to koszt
        wszystkich akcji zostaje zwiększony o 2 PK.
    </string>
    <string name="maestria_pancerza_title"> \t 1.2. Maestria pancerza </string>
    <string name="maestria_pancerza_content">
        \t Umiejętność podstawowa: Biegłość pancerza \n
        \t Typ: Umiejętność pasywna \n \n

        Zmniejsza ilość siły potrzebnej do noszenia pancerza o 6 punktów.
        Umiejętność ta zwiększa ilość PK, których wymagają akcje postaci
        o 1 PK jeśli ciężar ekwipunku postaci przekroczy jej siłę o 2 lub
        więcej punktów, oraz o 2 PK, jeśli ciężar ekwipunku postaci przekroczy
        jej siłę o 4 lub więcej punktów.
    </string>
    <string name="krzepa_title"> \t  1.3. Krzepa </string>
    <string name="krzepa_content">
       \t Umiejętność podstawowa: Adept pancerza \n
       \t Typ: Umiejętność pasywna \n \n

        Korzystanie z tej umiejętności całkowicie
        znosi negatywne efekty korzystania z umiejętności
        Adept-, Biegłość-, oraz Maestria Pancerza.
    </string>
    <string name="potezny_cios_title">  2. Potężny cios </string>
    <string name="potezny_cios_content">
        \t Typ: Umiejętność aktywna, wzmocnienie ataku wręcz \n
        \t Koszt: 2/4/6 PK \n \n

        Pozwala użytkownikowi momentalnie zwiększyć
        poziom Mocy ciosu o 1, 2, lub 3, za każdy z
        nich płacąc 2 PK. Użycie tej umiejętności nie
        wymaga czasu, zatem postać może zaatakować lub
        użyć innej umiejętności jeszcze w tej samej
        turze, w której aktywowała „Potężny Cios”.

    </string>
    <string name="destrukcja_pancerza_title">  \t 2.1. Destrukcja pancerza </string>
    <string name="destrukcja_pancerza_content">
        \t Typ:  Umiejętność aktywna, technika ofensywna \n
        \t Koszt: 1 PK \n \n

        Pozwala postaci na normalnych zasadach wyprowadzić cios,
        który zadaje obrażenia pancerzowi. Jeśli cios miałby
        zadać obrażenia pancerzowi niezależnie od działania tej
        umiejętności, wówczas jej użycie powoduje podwojenie tych
        obrażeń. Jakiekolwiek efekty bezpośrednio wpływające na
        ilość obrażeń zadawanych przez postać, w identyczny sposób
        wpływają także na wartość dziurawienia pancerza.


    </string>
    <string name="wstrzasajace_uderzenia_title">  \t 2.2. Wstrząsające uderzenia </string>
    <string name="wstrzasajace_uderzenia_content">
        \t Umiejętność podstawowa: Potężny cios \n
        \t Typ: Umiejętność pasywna \n \n

        Każdy z ciosów zadanych przez posiadacza tej umiejętności
        zadaje 1 punkt obrażeń celowi, jeżeli zostanie zablokowany
        przy użyciu tarczy lub broni. Jeżeli natomiast dosięgnie
        celu, wówczas zadaje on 1 dodatkowy punkt obrażeń (dodawany
        jest on na końcu, już po uwzględnieniu pancerza celu oraz
        trafionej części ciała).

    </string>
    <string name="ostatni_szept_title"> \t 2.3. Ostatni szept </string>
    <string name="ostatni_szept_content">
        \t Umiejętność podstawowa: Potężny cios \n
        \t Typ: Umiejętność pasywna \n \n

        Ciosy skierowane przeciwko celom leżącym na ziemi
        (z jakiegokolwiek powodu) zawsze liczą
        się jako ciosy krytyczne.

    </string>
    <string name="cios_tarcza_title">  3. Cios tarczą </string>
    <string name="cios_tarcza_content">
        \t Typ: Umiejętność aktywna, atak tarczą \n
        \t Celność: +5 (tarcza nie posiada bazowego bonusu do celności) \n
        \t Koszt: 1 PK \n \n

        Pozwala użytkownikowi uderzyć wroga tarczą,
        zadając mu obrażenia równe bonusowi do bloku
        swojej tarczy. Jeśli po uwzględnieniu obrony
        i pancerza cel odniesie obrażenia od tego ataku,
        zostaje on wytrącony z równowagi i traci najbliższą
        turę. Do tego czasu nie może wykonywać żadnych czynności.
        Cios krytyczny sprawia, że cel zostaje przewrócony.

    </string>
    <string name="odbicie_title"> \t 3.1. Odbicie </string>
    <string name="odbicie_content">
        \t Umiejętność podstawowa: Cios tarczą \n
        \t Typ: Umiejętność aktywna, wzmocnienie bloku tarczą, reakcja \n
        \t Koszt: 1 PK + koszt bloku \n \n

        Pozwala postaci wykonać uderzenie tarczą podczas blokowania,
        aby wytrącić atakującego z równowagi. Kiedy kość bloku postaci
        wskaże wartość równą, lub mniejszą, niż dwukrotność jej szansy
        na cios krytyczny (wręcz), wówczas użycie tej umiejętności staje
        się możliwe. Zapłacenie dodatkowego 1 PK za ten blok pozawala
        wytrącić wroga z równowagi (pod warunkiem, że ten atakuje przy
        użyciu broni białej). W takiej sytuacji, ruch tego przeciwnika
        natychmiast się kończy. Jeśli ten zdążył już dobiec końca,
        wówczas traci on cały swój następny ruch.

    </string>
    <string name="zmiazdzenie_title"> \t 3.2. Zmiażdżenie </string>
    <string name="zmiazdzenie_content">
        \t Umiejętność podstawowa: Cios tarczą \n
        \t Typ: Umiejętność pasywna \n \n

        Zadanie przeciwnikowi obrażeń krytycznym ciosem tarczą
        od tej pory zamiast wytrącać go z równowagi, ogłusza go na jedną turę.

    </string>
    <string name="bieglosc_stylu_walki_title">  4. Biegłość stylu walki </string>
    <string name="bieglosc_stylu_walki_content">
        \t Typ: Umiejętność pasywna \n \n

        Po zdobyciu tej umiejętności, postać otrzymuje
        bonus do walki w jednym, wybranym stylu. Style
        ten można później ulepszać, tak, jak normalną umiejętność.

    </string>
    <string name="bron_jednoreczna_title"> \t 4.1. Broń jednoręczna </string>
    <string name="bron_jednoreczna_content">

        I: Licząc od początku zwarcia, co drugi ruch postać może wykonać dwa ataki zamiast jednego. \n
        II: Podczas ataku postać może przerzucić jedną ze swoich kości obrażeń, lub zmusić wroga,
        żeby przerzucił swoją kość uniku. \n
        III:  Postać może w trakcie walki raz na ruch użyć dowolnego małego przedmiotu
        (np. Eliksiru) bez utraty akcji.

    </string>
    <string name="dwie_bronie_jednoreczne_title"> \t 4.2. Dwie bronie jednoręczne </string>
    <string name="dwie_bronie_jednoreczne_content">
        I: Postać może wykonać atak obiema używanymi sztukami broni naraz.
        Taki atak jest traktowany, jakby został wykonany przy użyciu jednej broni,
        posiadającej Siłę równą zsumowanej Sile obu wykorzystanych broni oraz „niższą”
        spośród dwóch kości. Podczas wyprowadzania takiego ciosu rzuca się za celność
        jeden raz, z uwzględnieniem niższego z dwóch bonusów do celności i do trafienia
        krytycznego. Bonusy za biegłość broni uwzględniane są jedynie, kiedy taki atak
        zostaje wykonany przy użyciu dwóch broni tego samego typu. \n
        II: Każdy cios zadany przy użyciu dwóch broni zaczyna z drugiego poziomu mocy. \n
        III: Koszt bloku dwoma broniami zostaje zmniejszony o 1 PK. Posiadanie tej
        umiejętności umożliwia postaci blokowanie przy użyciu dwóch sztyletów,
        jednak bez redukcji kosztu. zmniejszenie kosztu bloku dwoma broniami.

    </string>
    <string name="bron_jednoreczna_i_tarcza_title"> \t 4.3. Broń jednoręczna i tarcza </string>
    <string name="bron_jednoreczna_i_tarcza_content">
        I: Koszt bloku tarczą zostaje zmniejszony o 1 PK. \n
        II: Kiedy postać odpoczywa, koszt bloku tarczą zostanę zmniejszony o dodatkowy 1 PK. \n
        III: Kiedy postać odpoczywa, premia do bloku jej tarczy zostaje podniesiona dwukrotnie.
        Postać nie może korzystać z dwóch stylów walki w tym samym czasie.

    </string>
    <string name="bron_dwureczna_title"> \t 4.4. Broń dwuręczna </string>
    <string name="bron_dwureczna_content">
        I: Obrona przed ciosem zadanym przez postać przy użyciu broni dwuręcznej wymaga dodatkowego 1 PK. \n
        II: Wtajemniczony: Każdy atak bronią dwuręczną zaczyna z drugiego poziomu mocy. \n
        III: Cios krytyczny zadany bronią dwuręczną całkowicie ignoruje blok celu
        (jednak jego cel wciąż musi opłacić koszt)

    </string>
    <string name="szarza_title"> 5. Szarża </string>
    <string name="szarza_content">
        \t Typ: Umiejętność aktywna, technika ofensywna \n
        \t Koszt: 2 PK \n \n

        Użytkownik może doskoczyć do oddalonego przeciwnika,
        po czym wykonać atak o poziomie mocy podniesionym o 1.
        Szarża pozwala także przerwać walkę w zwarciu bez
        otrzymywania ciosu od wroga. Szarża nie może zostać użyta,
        jeżeli na polu bitwy nie pozostał żaden oddalony przeciwnik. \n \n

        Poza walką ta umiejętność może zostać użyta do wyważania drzwi,
        czy wykonywania innych czynności związanych z uderzaniem w coś i
        szybkim przemieszczaniem się. Posiadacz tej umiejętności otrzymuje
        bonus +3 do każdego takiego rzutu.

    </string>
    <string name="stan_za_mna_title"> \t 5.1. Stań za mną! </string>
    <string name="stan_za_mna_content">
        \t Umiejętność podstawowa: Szarża \n
        \t Typ: Umiejętność aktywna, technika obronna \n
        \t Koszt: 1PK + Koszt bloku \n \n

        Pozwala użytkownikowi doskoczyć do oddalonego sojusznika i
        podjąć próbę zablokowania wymierzonego w niego ciosu. Ta
        umiejętność nie może zostać wykorzystana, kiedy ktoś lub
        coś stoi pomiędzy postacią a jej sojusznikiem, oraz kiedy
        cel ataku wykonał już rzut za obronę. W przypadku niepowodzenia
        bloku, użytkownik umiejętności przyjmuje na siebie cios. \n

        Umiejętność tą można wykorzystać także, jeżeli formalnie nie trwa walka.

    </string>
    <string name="fala_stali_title"> \t 5.2. Fala stali </string>
    <string name="fala_stali_content">
        \t Umiejętność podstawowa: Szarża \n
        \t Typ: Umiejętność aktywna, technika ofensywna \n
        \t Koszt: 1 PK \n \n

        Pozwala postaci doskoczyć do oddalonego wroga i uderzyć go
        barkiem. Obie postacie muszą wtedy wykonać sporny test swojego
        aktualnego zdrowia, do którego dodatkowo atakujący dodaje ciężar
        swojego pancerza. Jeśli w tym teście zwycięstwo odniesie atakujący,
        wówczas trafiony zostaje przewrócony. W przeciwnym wypadku nic się nie dzieje.

    </string>
    <string name="zapal_title"> \t 5.3. Zapał </string>
    <string name="zapal_content">
        \t Umiejętność podstawowa: Szarża \n
        \t Typ: Umiejętność pasywna \n \n

        Na samym początku walki postać może doskoczyć do wybranego
        przeciwnika (pod warunkiem, że nikt ani nic nie stoi pomiędzy
        nimi) i wykonać dodatkowy ruch, po którym rozpoczyna się właściwa walka.
        Jeśli w walce uczestniczy kilka postaci z tą umiejętnością, wówczas
        pierwszeństwo ma ta o wyższej Prędkości.


    </string>
</resources>